--- a/Spider Project FD approche.Rmd
+++ b/Spider Project FD approche.Rmd
@@ -4,11 +4,39 @@ author: "Job Knoester"
 date: "19 mai 2017"
 output: html_document
 ---
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(warning = FALSE)
+knitr::opts_chunk$set(message = FALSE)
+knitr::opts_chunk$set(include = TRUE)
 
+library(corrplot)
+library(ggplot2)
+library(plotly)
+library(GGally)
+library(ade4)
+library(mice)
+library(reshape2)
+library(FD)
+library(gridExtra)
+library(explor)
+library(picante)
+library(parallel)
+library(hypervolume)
+library(moments)
+library(cati)
+library(ggdendro)
+library(doBy)
+
+proportion <- read.csv("~/etudes/Cours Master/Cours M2/Stage/SpiderProject/Spider_weited_traits.csv")
+row.names(proportion) <- paste(proportion$Specimen,proportion$Taxo,proportion$StageSex)
+proportioncs <- cbind(proportion[,c(1:9)],scale(proportion[,c(10:15)],center = T, scale = T))
+
+```
 
 ## Diversity indices with transects as communities
 ```{r}
-proportionmatrix <- proportion[,c(10:15)]
+proportionmatrix <- proportion[,c(10:13)]
 row.names(proportionmatrix) <- proportion[,2]
 
 abundancematrixTransect <- dcast(proportion, Transect~Specimen, length)
@@ -31,11 +59,11 @@ abundancematrixPlot <- dcast(proportion, Plot~Specimen, length)
 row.names(abundancematrixPlot) <- abundancematrixPlot[,1]
 abundancematrixPlot <- abundancematrixPlot[,2:dim(abundancematrixPlot)[2]] 
 
-FDproportionPlot <- dbFD(x = proportionmatrix, a = abundancematrixPlot, w.abun = FALSE, stand.x = TRUE, ord = c("podani", "metric"), asym.bin = NULL, calc.FRic = TRUE, m = 6, stand.FRic = FALSE, scale.RaoQ = FALSE, calc.FGR = FALSE, clust.type = "ward", km.inf.gr = 2, km.sup.gr = nrow(x) - 1, km.iter = 100, km.crit = c("calinski", "ssi"), calc.CWM = TRUE, CWM.type = c("dom", "all"), calc.FDiv = TRUE, dist.bin = 2, print.pco = FALSE, messages = TRUE)
+FDproportionPlot <- dbFD(x = proportionmatrix, a = abundancematrixPlot, w.abun = FALSE, stand.x = TRUE, ord = c("podani", "metric"), asym.bin = NULL, calc.FRic = TRUE, m = 4, stand.FRic = FALSE, scale.RaoQ = FALSE, calc.FGR = FALSE, clust.type = "ward", km.inf.gr = 2, km.sup.gr = nrow(x) - 1, km.iter = 100, km.crit = c("calinski", "ssi"), calc.CWM = TRUE, CWM.type = c("dom", "all"), calc.FDiv = TRUE, dist.bin = 2, print.pco = FALSE, messages = TRUE)
 
 FDPlot <- as.data.frame(cbind(FDproportionPlot$FRic,FDproportionPlot$FEve,FDproportionPlot$FDiv,FDproportionPlot$FDis,FDproportionPlot$RaoQ))
 colnames(FDPlot) <- c("FRic","FEve","FDiv","FDis","RaoQ")
-Transect <- c("800m","800m","800m","600m","600m","600m","450m","450m","450m")
+Transect <- c("800m","800m","600m","600m","600m","450m","450m","450m")
 # Transect <- c(800,800,800,600,600,600,450,450,450)
 FDPlot <- cbind(Transect,FDPlot)
 # FDPlot
@@ -44,29 +72,29 @@ FDPlot <- cbind(Transect,FDPlot)
 ploting results
 ```{r}
 g <-  ggplot() + 
-  geom_text(data = FDPlot, aes(x=Transect, y=FRic, label=row.names(FDPlot)),  colour="black") + 
-  geom_point(data = FDTransect, aes(x= Transect, y = FRic), size = 3, colour = "red")
+  geom_text(data = FDPlot, aes(x=Transect, y=FRic, label=row.names(FDPlot)),  colour="black")  
+ # geom_point(data = FDTransect, aes(x= Transect, y = FRic), size = 3, colour = "red")
 h <-  ggplot() + 
-  geom_text(data = FDPlot, aes(x=Transect, y=FEve, label=row.names(FDPlot)),  colour="black") + 
-  geom_point(data = FDTransect, aes(x= Transect, y = FEve), size = 3, colour = "red")
+  geom_text(data = FDPlot, aes(x=Transect, y=FEve, label=row.names(FDPlot)),  colour="black")  
+ # geom_point(data = FDTransect, aes(x= Transect, y = FEve), size = 3, colour = "red")
 i <-  ggplot() + 
-  geom_text(data = FDPlot, aes(x=Transect, y=FDiv, label=row.names(FDPlot)),  colour="black") + 
-  geom_point(data = FDTransect, aes(x= Transect, y = FDiv), size = 3, colour = "red")
+  geom_text(data = FDPlot, aes(x=Transect, y=FDiv, label=row.names(FDPlot)),  colour="black")  
+##  geom_point(data = FDTransect, aes(x= Transect, y = FDiv), size = 3, colour = "red")
 j <-  ggplot() + 
-  geom_text(data = FDPlot, aes(x=Transect, y=FDis, label=row.names(FDPlot)),  colour="black") + 
-  geom_point(data = FDTransect, aes(x= Transect, y = FDis), size = 3, colour = "red")
+  geom_text(data = FDPlot, aes(x=Transect, y=FDis, label=row.names(FDPlot)),  colour="black")  
+#  geom_point(data = FDTransect, aes(x= Transect, y = FDis), size = 3, colour = "red")
 k <-  ggplot() + 
-  geom_text(data = FDPlot, aes(x=Transect, y=RaoQ, label=row.names(FDPlot)),  colour="black") + 
-  geom_point(data = FDTransect, aes(x= Transect, y = RaoQ), size = 3, colour = "red")
+  geom_text(data = FDPlot, aes(x=Transect, y=RaoQ, label=row.names(FDPlot)),  colour="black")  
+#  geom_point(data = FDTransect, aes(x= Transect, y = RaoQ), size = 3, colour = "red")
 
 grid.arrange(g,h,i,j,k, ncol=3)
 
-# pairwise.wilcox.test(FDPlot$FRic,FDPlot$Transect)
-# pairwise.wilcox.test(FDPlot$FEve,FDPlot$Transect)
-# pairwise.wilcox.test(FDPlot$FDiv,FDPlot$Transect)
-# pairwise.wilcox.test(FDPlot$FDis,FDPlot$Transect)
-# pairwise.wilcox.test(FDPlot$RaoQ,FDPlot$Transect)
-# 
+pairwise.wilcox.test(FDPlot$FRic,FDPlot$Transect)
+pairwise.wilcox.test(FDPlot$FEve,FDPlot$Transect)
+pairwise.wilcox.test(FDPlot$FDiv,FDPlot$Transect)
+pairwise.wilcox.test(FDPlot$FDis,FDPlot$Transect)
+pairwise.wilcox.test(FDPlot$RaoQ,FDPlot$Transect)
+#
 # cor.test(FDPlot$FRic,FDPlot$Transect, method = "spearman")
 # cor.test(FDPlot$FEve,FDPlot$Transect, method = "spearman")
 # cor.test(FDPlot$FDiv,FDPlot$Transect, method = "spearman")
@@ -78,25 +106,161 @@ grid.arrange(g,h,i,j,k, ncol=3)
 ## Nul model
 
 ```{r}
+nrep <- 99
+abundancematrixnull <- list()
+for (i in 1:nrep) {
+  set.seed(i)
+  plotsamp <- as.data.frame(sample(proportioncs$Plot, length(proportioncs$Plot), replace = F))
+  specimen <- proportioncs$Specimen
+  plotsamp <- cbind(specimen,plotsamp)
+  colnames(plotsamp)[2] <- "plot"
+  abundancematrixrm <- dcast(plotsamp, plot~specimen, length)
+  row.names(abundancematrixrm) <- abundancematrixrm[,1]
+  abundancematrixnull[[i]] <- abundancematrixrm[,2:dim(abundancematrixrm)[2]]
+}
 
-# cassique=list(NULL)
-# awara=list(NULL)
-# for(i in 1:49){ 
-#   for(k in 1:49){
-#     cassique[[k]] = randomizeMatrix(samp = abundancematrixPlot, null.model = "frequency", iterations = 50)
-#   } 
-#   awara[[i]] = dbFD(x = proportionmatrix, a = cassique[[i]], w.abun = TRUE, stand.x = TRUE, ord = c("podani", "metric"), asym.bin = NULL, corr = "lingoes", calc.FRic = TRUE, m = "min", stand.FRic = FALSE, scale.RaoQ = FALSE, calc.FGR=FALSE, calc.CWM = FALSE, CWM.type = c("dom", "all"), calc.FDiv = TRUE, dist.bin = 2, print.pco = FALSE, messages = FALSE)
-# }
-# 
-# machoiron=as.data.frame(matrix(0,9,49)) 
-# for(i in 1:49){ 
-#   machoiron[,i]=data.frame(awara[[i]]$FRic)
-# } 
-# row.names(machoiron)=row.names(abundancematrixPlot)
-# 
-# machoiron <- t(machoiron)
-# 
-# z <- ggplot(machoiron, aes(x=machoiron[1,])) +
-#   geom_density(alpha = 0.3, size = 1)
+
+dbfd <- function(abmat, trtmat) {FD::dbFD(x = trtmat, a = abmat, w.abun = FALSE, stand.x = TRUE, ord = c("podani", "metric"), asym.bin = NULL, calc.FRic = TRUE, m = 6, stand.FRic = FALSE, scale.RaoQ = FALSE, calc.FGR = FALSE, clust.type = "ward", km.inf.gr = 2, km.sup.gr = nrow(x) - 1, km.iter = 100, km.crit = c("calinski", "ssi"), calc.CWM = FALSE, CWM.type = c("dom", "all"), calc.FDiv = TRUE, dist.bin = 2, print.pco = FALSE, messages = TRUE)}
+
+time <- Sys.time()
+cores <- detectCores() - 1
+cl <- makeCluster(cores)
+clusterExport(cl, list(c('dbfd','abundancematrixnull','FD','proportionmatrix')))
+FDpnull <- parLapply(cl, abundancematrixnull, dbfd, trtmat=proportionmatrix)
+stopCluster(cl)
+rm(cl) 
+Sys.time()-time
+
+FRicnull <- matrix(nrow = 0, ncol = 9)
+FEvenull <- matrix(nrow = 0, ncol = 9)
+FDivnull <- matrix(nrow = 0, ncol = 9)
+FDisnull <- matrix(nrow = 0, ncol = 9)
+RaoQnull <- matrix(nrow = 0, ncol = 9)
+
+for (i in 1:nrep) {
+FRicnull <- rbind(FRicnull,FDpnull[[i]]$FRic)
+FEvenull <- rbind(FEvenull,FDpnull[[i]]$FEve)
+FDivnull <- rbind(FDivnull,FDpnull[[i]]$FDiv)
+FDisnull <- rbind(FDisnull,FDpnull[[i]]$FDis)
+RaoQnull <- rbind(RaoQnull,FDpnull[[i]]$RaoQ)
+}
+
+FDnull <- list(FRicnull,FEvenull,FDivnull,FDisnull,RaoQnull)
+
+nplot <- 9
+nind <- 5
+
+FDpvalue <- matrix(nrow = nind,ncol = nplot)
+colnames(FDpvalue) <- c("P1","P2","P3","P4","P5","P6","P7","P8","P9")
+rownames(FDpvalue) <- c("FRic","FEve","FDiv","FDis","RaoQ")
+
+for (i in 1:nplot) {   
+  for (j in 1:nind) {   
+    FDpvalue[j,i] <- (rank(c(FDPlot[i,j+1], FDnull[[j]][,i]))/(nrep+1))[1]
+    # if (pvalue[j,i]<0.025) {pvalue[j,i] <- paste("SE",":",pvalue[j,i])}
+    # else { if (pvalue[j,i]>0.975) {pvalue[j,i] <- paste("HE",":",pvalue[j,i])}
+    #   else {pvalue[j,i] <- paste("exp",":",pvalue[j,i])}}
+  }
+}
+
+summary(FDPlot)
+matplot(FDpvalue)
+
+
 ```
+
+
+## Diversity indices with sampling point as communities
+```{r}
+# abundancematrixSPR <- dcast(proant, interaction(Plot,SamplingPoint)~Specimen, length)
+# row.names(abundancematrixSPR) <- abundancematrixSPR[,1]
+# abundancematrixSPR <- abundancematrixSPR[,2:dim(abundancematrixSPR)[2]] 
+proant$PlotSamplingPoint <- interaction(proant$Plot,proant$SamplingPoint)
+abunmatantSPR <-summaryBy(data = proant, formula = Abundance ~ Gen_sp+PlotSamplingPoint, FUN = sum, keep.names = T, na.rm = T)
+abunmatantSPR <- dcast(abunmatantSPR, PlotSamplingPoint~Gen_sp)
+row.names(abunmatantSPR) <- abunmatantSPR[,1]
+abunmatantSPR <- abunmatantSPR[,2:dim(abunmatantSPR)[2]]
+abunmatantSPR[is.na(abunmatantSPR)] <- 0
+
+FDproportionSPR <- dbFD(x = promatant, a = abunmatantSPR, w.abun = FALSE, stand.x = TRUE, ord = c("podani", "metric"), asym.bin = NULL, calc.FRic = TRUE, m = 6, stand.FRic = FALSE, scale.RaoQ = FALSE, calc.FGR = FALSE, clust.type = "ward", km.inf.gr = 2, km.sup.gr = nrow(x) - 1, km.iter = 100, km.crit = c("calinski", "ssi"), calc.CWM = TRUE, CWM.type = c("dom", "all"), calc.FDiv = TRUE, dist.bin = 2, print.pco = FALSE, messages = TRUE)
+
+FDSPR <- as.data.frame(cbind(FDproportionSPR$FRic,FDproportionSPR$FEve,FDproportionSPR$FDiv,FDproportionSPR$FDis,FDproportionSPR$RaoQ))
+colnames(FDSPR) <- c("FRic","FEve","FDiv","FDis","RaoQ")
+
+Plot <- c("P1","P2","P3","P4","P5","P6","P7","P8",
+          "P1","P2","P3","P4","P5","P6","P7","P8","P9",
+          "P1","P2","P3","P4","P5","P6","P7","P8","P9",
+          "P1","P2","P3","P4","P5","P6",     "P8","P9",
+          "P1","P2","P3","P4","P5","P6","P7","P8","P9",
+          "P1","P2",     "P4","P5",     "P7","P8",
+          "P1","P2","P3","P4","P5","P6",     "P8","P9",
+          "P1","P2","P3","P4","P5",     "P7","P8",
+          "P1","P2","P3","P4","P5","P6","P7",     "P9",
+          "P1","P2","P3","P4","P5","P6","P7","P8","P9",
+          "P1","P2","P3","P4","P5",     "P7","P8","P9",
+          "P1","P2","P3","P4","P5","P6","P7","P8","P9",
+          "P1",     "P3","P4","P5","P6","P7","P8","P9",
+          "P1","P2","P3","P4","P5","P6","P7","P8","P9",
+          "P1","P2","P3","P4","P5","P6","P7","P8","P9",
+          "P1","P2","P3","P4","P5","P6","P7",     "P9",
+          "P1","P2","P3","P4","P5","P6","P7",     "P9",
+          "P1","P2","P3","P4","P5","P6","P7",     "P9",
+          "P1","P2","P3","P4","P5",     "P7","P8","P9",
+          "P1","P2",     "P4","P5",     "P7","P8","P9")
+FDSPR <- cbind(Plot, FDSPR)
+# FDPlot
+```
+
+ploting results
+```{r}
+l <-  ggplot() +   geom_boxplot(data = FDSPR, aes(x=Plot, y=FRic),  colour="black")
+m <-  ggplot() +   geom_boxplot(data = FDSPR, aes(x=Plot, y=FEve),  colour="black")
+n <-  ggplot() +   geom_boxplot(data = FDSPR, aes(x=Plot, y=FDiv),  colour="black")
+o <-  ggplot() +   geom_boxplot(data = FDSPR, aes(x=Plot, y=FDis),  colour="black")
+p <-  ggplot() +   geom_boxplot(data = FDSPR, aes(x=Plot, y=RaoQ),  colour="black")
+
+grid.arrange(l,m,n,o,p, ncol=3)
+
+pairwise.wilcox.test(FDSPR$FRic,FDSPR$Plot)
+pairwise.wilcox.test(FDSPR$FEve,FDSPR$Plot)
+pairwise.wilcox.test(FDSPR$FDiv,FDSPR$Plot)
+pairwise.wilcox.test(FDSPR$FDis,FDSPR$Plot)
+pairwise.wilcox.test(FDSPR$RaoQ,FDSPR$Plot)
+
+# cor.test(FDPlot$FRic,FDPlot$Transect, method = "spearman")
+# cor.test(FDPlot$FEve,FDPlot$Transect, method = "spearman")
+# cor.test(FDPlot$FDiv,FDPlot$Transect, method = "spearman")
+# cor.test(FDPlot$FDis,FDPlot$Transect, method = "spearman")
+# cor.test(FDPlot$RaoQ,FDPlot$Transect, method = "spearman")
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
